Went to meet up with him
Main things to change: Find the locations and print in the metadata, fix the aspect ratio, fix the output for grayscale so it doesn't double the .jpg and .png

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "-a", "-g", "-rows", "480" , "-cols",
-                 "640" , "-t", "png", "cars", "7"
+                "-a", "-g", "", "" , "",
+                 "" , "-t", "png", "dir", "7"
             ]
         }
     ]
